Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,7 @@ steps:
     targetType: 'inline'
     failOnStderr: true
     script: |
-      curl -O https://tools.veracode.com/integrations/xcode/com.veracode.mobileapplicationpackager.dmg
+      curl -s -O https://tools.veracode.com/integrations/xcode/com.veracode.mobileapplicationpackager.dmg
       echo $?
       mkdir packager
       echo $?
