--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ steps:
 - task: Bash@3
   inputs:
     targetType: 'inline'
-    #failOnStderr: true
+    failOnStderr: true
     script: |
       curl -O https://tools.veracode.com/integrations/xcode/com.veracode.mobileapplicationpackager.dmg
       echo 'curl command returned ' $?
