--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,6 +35,6 @@ steps:
       chmod 777 ./vcxcodepkg
       echo 'chmod returned ' $?
       
-      ./vcxcodepkg -d || true
+      ./vcxcodepkg --noui --logfile=${{ Agent.WorkFolder }}
       echo 'vcxcodepkg command returned ' $?
       
