--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -37,5 +37,6 @@ jobs:
         version: ${{ github.run_id }}
         filepath: target/verademo.war
         sandboxname: Github-Sandbox
+        debug: true
         vid: ${{ secrets.VERACODE_API_ID }}
         vkey: ${{ secrets.VERACODE_API_KEY }}
