--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -35,7 +35,7 @@ jobs:
         createsandbox: true
         canjobfail: true
         version: ${{ github.run_id }}
-        filepath: target/*.jar
+        filepath: target/**/*.jar
         sandboxname: Github-Sandbox
         debug: true
         vid: ${{secrets.VERACODE_API_ID}}
