--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -1,7 +1,9 @@
 ademo.war# This workflow will build a package using Maven and then publish it to GitHub packages when a release is created
 # For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#apache-maven-with-a-settings-path
-
 name: SAST Scan
+env:
+  V_ID: ${{ secrets.V_ID }}
+  V_KEY: ${{ secrets.V_KEY }}
 
 on:
   workflow_dispatch
@@ -26,6 +28,10 @@ jobs:
 
     - name: Build with Maven
       run: mvn package
+     - name: Setup Python for Report Fetching
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.8
         
     - name: Veracode Upload And Scan
       uses: veracode/veracode-uploadandscan-action@master
@@ -35,21 +41,18 @@ jobs:
         createsandbox: true
         canjobfail: true
         version: ${{ github.run_id }}
-        filepath: target/
+        filepath: target/verademo.war
         sandboxname: Github-Sandbox
         debug: true
         vid: ${{secrets.VERACODE_API_ID}}
         vkey: ${{secrets.VERACODE_API_KEY}}
         
     - name: Fetch Veracode Report
-      env:
-          vid: '${{ secrets.VERACODE_API_ID }}'
-          vkey: '${{ secrets.VERACODE_API_SECRET }}'
       run: |
         git clone https://github.com/veracode/veracode-python-hmac-example.git
         pip install -r veracode-python-hmac-example/requirements.txt
-        export VERACODE_API_KEY_ID=${{ env.vid}}
-        export VERACODE_API_KEY_SECRET=${{ env.vkey}}
+        export VERACODE_API_KEY_ID=${{ env.V_ID}}
+        export VERACODE_API_KEY_SECRET=${{ env.V_KEY}}
         ID="1845628"
         SANDBOX_ID="5655734"
         
