--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -1,21 +1,18 @@
-ademo.war# This workflow will build a package using Maven and then publish it to GitHub packages when a release is created
+# This workflow will build a package using Maven and then publish it to GitHub packages when a release is created
 # For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#apache-maven-with-a-settings-path
 name: SAST Scan
 env:
-  V_ID: ${{ secrets.V_ID }}
-  V_KEY: ${{ secrets.V_KEY }}
-
+  V_ID: ${{ secrets.VERACODE_API_ID }}
+  V_KEY: ${{ secrets.VERACODE_API_KEY }}
+  
 on:
   workflow_dispatch
-
 jobs:
   build:
-
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 11
@@ -25,10 +22,11 @@ jobs:
         distribution: 'adopt'
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
         settings-path: ${{ github.workspace }} # location for the settings.xml file
-
+        
     - name: Build with Maven
       run: mvn package
-     - name: Setup Python for Report Fetching
+      
+    - name: Setup Python for Report Fetching
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
@@ -46,7 +44,7 @@ jobs:
         debug: true
         vid: ${{secrets.VERACODE_API_ID}}
         vkey: ${{secrets.VERACODE_API_KEY}}
-        
+
     - name: Fetch Veracode Report
       run: |
         git clone https://github.com/veracode/veracode-python-hmac-example.git
@@ -57,7 +55,7 @@ jobs:
         SANDBOX_ID="5655734"
         
         http --auth-type veracode_hmac GET "https://analysiscenter.veracode.com/api/5.0/getbuildlist.do?app_id=$ID&sandbox_id=$SANDBOX_ID"
+  
 
 
-        
-      
+
