--- a/.github/workflows/veracode1.yml
+++ b/.github/workflows/veracode1.yml
@@ -38,4 +38,5 @@ jobs:
         java-version: 8
         distribution: 'temurin'
     - run: java -jar pipeline-scan.jar --veracode_api_id "${{secrets.VERACODE_API_ID}}" --veracode_api_key "${{secrets.VERACODE_API_KEY}}" --fail_on_severity="Very High, High" --file  target/verademo.war
+    continue-on-error: true
       
