--- a/.github/workflows/veracode1.yml
+++ b/.github/workflows/veracode1.yml
@@ -36,4 +36,6 @@ jobs:
           file: target/verademo.war 
           veracode_policy_name: "Veracode Recommended High"
           fail_build: false
+          verabose: true
+          
       
