--- a/.github/workflows/veracode1.yml
+++ b/.github/workflows/veracode1.yml
@@ -37,6 +37,7 @@ jobs:
           veracode_policy_name: "Veracode Recommended High"
           fail_build: false
           Verabose: true
-
+          ACTIONS_STEP_DEBUG: true
+          
           
       
