--- a/.github/workflows/veracode2.yml
+++ b/.github/workflows/veracode2.yml
@@ -1,6 +1,37 @@
 name: Veracode Static Pipeline Scan
+env:
+  V_ID: ${{ secrets.VERACODE_API_ID }}
+  V_KEY: ${{ secrets.VERACODE_API_KEY }}
+  SRCCLR_API_TOKEN: $(secrets.SRCCLR_API_TOKEN)
 
 on:
   workflow_dispatch
+  
+  
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 11
+      uses: actions/setup-java@v2
+      with:
+        java-version: '11'
+        distribution: 'adopt'
+        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
+        settings-path: ${{ github.workspace }} # location for the settings.xml file
+        
+    - name: Build with Maven
+      run: mvn package
+      
+    - name: Fetch Veracode Report
+      run: |
+        curl -sSL https://download.sourceclear.com/ci.sh | sh
+        
+       
+        
 
 
