--- a/.github/workflows/veracode2.yml
+++ b/.github/workflows/veracode2.yml
@@ -1,4 +1,4 @@
-name: Veracode Static Pipeline Scan
+name: Veracode SCA
 env:
   V_ID: ${{ secrets.VERACODE_API_ID }}
   V_KEY: ${{ secrets.VERACODE_API_KEY }}
