--- a/.github/workflows/veracode2.yml
+++ b/.github/workflows/veracode2.yml
@@ -27,8 +27,9 @@ jobs:
     - name: Build with Maven
       run: mvn package
       
-    - name: Fetch Veracode Report
+    - name: SCA Run
       run: |
+        export SRCCLR_API_TOKEN="$(SRCCLR_API_TOKEN)"
         curl -sSL https://download.sourceclear.com/ci.sh | sh
         
        
