--- a/.github/workflows/veracode2.yml
+++ b/.github/workflows/veracode2.yml
@@ -29,7 +29,7 @@ jobs:
       
     - name: SCA Run
       run: |
-        export SRCCLR_API_TOKEN="$(SRCCLR_API_TOKEN)"
+        export SRCCLR_API_TOKEN=$(env.SRCCLR_API_TOKEN)
         curl -sSL https://download.sourceclear.com/ci.sh | sh
         
        
