--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,11 +4,9 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/java
 
 trigger:
-- master
-
+- main
 pool:
   name: Default
-
 steps:
 - task: Maven@4
   inputs:
@@ -21,7 +19,7 @@ steps:
     mavenAuthenticateFeed: false
     effectivePomSkip: false
     sonarQubeRunAnalysis: false
-    
+
 # - task: Veracode@3
 #   inputs:
 #     ConnectionDetailsSelection: 'Service Connection'
