--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -41,6 +41,7 @@ jobs:
         version: ${{ github.run_id }}
         filepath: target/verademo.war
         sandboxname: Github-Sandbox
+        deleteincompletescan: 2
         debug: true
         vid: ${{secrets.VERACODE_API_ID}}
         vkey: ${{secrets.VERACODE_API_KEY}}
