--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -25,7 +25,11 @@ jobs:
         
     - name: Build with Maven
       run: mvn package
-      
+
+    - name: wrapper
+      run: |
+        wget https://tools.veracode.com/integrations/API-Wrappers/Java/bin/VeracodeJavaAPI.zip    
+     
     - name: Setup Python for Report Fetching
       uses: actions/setup-python@v2
       with:
