Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,17 +20,17 @@ steps:
     effectivePomSkip: false
     sonarQubeRunAnalysis: false
 
-# - task: Veracode@3
-#   inputs:
-#     ConnectionDetailsSelection: 'Service Connection'
-#     AnalysisService: 'vera_Azure'
-#     veracodeAppProfile: '$(system.teamProject)'
-#     version: '$(build.buildNumber)'
-#     filepath: '$(System.DefaultWorkingDirectory)'
-#     createProfile: true
-#     importResults: true
-#     failBuildIfUploadAndScanBuildStepFails: false
-#     maximumWaitTime: '60'
+- task: Veracode@3
+  inputs:
+    ConnectionDetailsSelection: 'Service Connection'
+    AnalysisService: 'vera_Azure'
+    veracodeAppProfile: 'Azure'
+    version: '$(build.buildNumber)'
+    filepath: '$(System.DefaultWorkingDirectory)'
+    createProfile: true
+    importResults: true
+    failBuildIfUploadAndScanBuildStepFails: false
+    maximumWaitTime: '60'
 
 #steps:
 #- task: PowerShell@2
