--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,6 +27,7 @@ steps:
     veracodeAppProfile: 'Azure'
     version: '$(build.buildNumber)'
     filepath: '$(System.DefaultWorkingDirectory)'
+    optargs: -autoscan false 
     createProfile: true
     importResults: true
     failBuildIfUploadAndScanBuildStepFails: false
