--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ steps:
     AnalysisService: 'vera_Azure'
     veracodeAppProfile: 'Azure'
     version: '$(build.buildNumber)'
-    filepath: 'app/verademo.war'
+    filepath: 'app/target/verademo.war'
     optargs: '-autoscan false ' 
     createProfile: true
     importResults: true
