--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,18 +20,18 @@ steps:
     effectivePomSkip: false
     sonarQubeRunAnalysis: false
 
-- task: Veracode@3
-  inputs:
-    ConnectionDetailsSelection: 'Service Connection'
-    AnalysisService: 'vera_Azure'
-    veracodeAppProfile: 'Azure'
-    version: '$(build.buildNumber)'
-    filepath: 'app/target/verademo.war'
-    # optargs: '-autoscan false ' 
-    createProfile: true
-    importResults: true
-    failBuildIfUploadAndScanBuildStepFails: false
-    maximumWaitTime: '60'
+# - task: Veracode@3
+#   inputs:
+#     ConnectionDetailsSelection: 'Service Connection'
+#     AnalysisService: 'vera_Azure'
+#     veracodeAppProfile: 'Azure'
+#     version: '$(build.buildNumber)'
+#     filepath: 'app/target/verademo.war'
+#     # optargs: '-autoscan false ' 
+#     createProfile: true
+#     importResults: true
+#     failBuildIfUploadAndScanBuildStepFails: false
+#     maximumWaitTime: '60'
 
 #steps:
 #- task: PowerShell@2
@@ -57,3 +57,16 @@ steps:
 #    version: '$(build.buildNumber)'
 #    filepath: 'pipeline-scan.zip'
 #    maximumWaitTime: '360'
+
+- task: Veracode@3
+  inputs:
+    ConnectionDetailsSelection: 'Service Connection'
+    AnalysisService: 'Veracode'
+    veracodeAppProfile: 'Myapp'
+    version: 'Test1'
+    filepath: 'target/Verdemo.war'
+    sandboxName: 'Sandbox 1'
+    createSandBox: true
+    createProfile: true
+    failBuildIfUploadAndScanBuildStepFails: true
+    maximumWaitTime: '60'
