--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -63,7 +63,7 @@ steps:
     ConnectionDetailsSelection: 'Service Connection'
     AnalysisService: 'Veracode'
     veracodeAppProfile: 'myapp'
-    version: 'Test1'
+    version: '$(build.buildNumber)'
     filepath: '/Users/amitashokshynavad/myagent/_work/5/s/target/verademo.war'
     createProfile: false
     failBuildIfUploadAndScanBuildStepFails: true
