--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,18 +29,18 @@ steps:
 
 
 
-# - task: Veracode@3
-#   inputs:
-#     ConnectionDetailsSelection: 'Service Connection'
-#     AnalysisService: 'vera_Azure'
-#     veracodeAppProfile: 'Azure'
-#     version: '$(build.buildNumber)'
-#     filepath: 'app/target/verademo.war'
-#     # optargs: '-autoscan false ' 
-#     createProfile: true
-#     importResults: true
-#     failBuildIfUploadAndScanBuildStepFails: false
-#     maximumWaitTime: '60'
+- task: Veracode@3
+  inputs:
+    ConnectionDetailsSelection: 'Service Connection'
+    AnalysisService: 'vera_Azure'
+    veracodeAppProfile: 'Vera&Test'
+    version: '$(build.buildNumber)'
+    filepath: 'app/target/verademo.war'
+    # optargs: '-autoscan false ' 
+    createProfile: true
+    importResults: true
+    failBuildIfUploadAndScanBuildStepFails: false
+    maximumWaitTime: '60'
 
 #steps:
 #- task: PowerShell@2
