--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,12 +20,12 @@ steps:
     effectivePomSkip: false
     sonarQubeRunAnalysis: false
 
-- task: VeracodePipelineScan@0
-  inputs:
-    VeracodeAPIID: '$(vid)'
-    VeracodeAPIsecret: '$(vkey)'
-    fileToScan: '/Users/amitashokshynavad/myagent/_work/2/s/target/verademo.war'
-    policyName: 'Veracode Recommended Very High COPY'
+# - task: VeracodePipelineScan@0
+#   inputs:
+#     VeracodeAPIID: '$(vid)'
+#     VeracodeAPIsecret: '$(vkey)'
+#     fileToScan: '/Users/amitashokshynavad/myagent/_work/2/s/target/verademo.war'
+#     policyName: 'Veracode Recommended Very High COPY'
 
 
 
