Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -81,8 +81,8 @@ steps:
  
 
 
-- task: VeracodePipelineScan@0
-  inputs:
-    VeracodeAPIID: '$(vid)'
-    VeracodeAPIsecret: '$(vkey)'
-    fileToScan: '$(System.DefaultWorkingDirectory)/verademo.war'
+# - task: VeracodePipelineScan@0
+#   inputs:
+#     VeracodeAPIID: '$(vid)'
+#     VeracodeAPIsecret: '$(vkey)'
+#     fileToScan: '$(System.DefaultWorkingDirectory)/verademo.war'
