--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,18 +29,18 @@ steps:
 
 
 
-- task: Veracode@3
-  inputs:
-    ConnectionDetailsSelection: 'Service Connection'
-    AnalysisService: 'vera_Azure'
-    veracodeAppProfile: 'Vera&Test'
-    version: '$(build.buildNumber)'
-    filepath: '/Users/amitashokshynavad/myagent/_work/2/s/target/verademo.war'
-    # optargs: '-autoscan false ' 
-    createProfile: true
-    importResults: true
-    failBuildIfUploadAndScanBuildStepFails: false
-    maximumWaitTime: '60'
+# - task: Veracode@3
+#   inputs:
+#     ConnectionDetailsSelection: 'Service Connection'
+#     AnalysisService: 'vera_Azure'
+#     veracodeAppProfile: 'Vera&Test'
+#     version: '$(build.buildNumber)'
+#     filepath: '/Users/amitashokshynavad/myagent/_work/2/s/target/verademo.war'
+#     # optargs: '-autoscan false ' 
+#     createProfile: true
+#     importResults: true
+#     failBuildIfUploadAndScanBuildStepFails: false
+#     maximumWaitTime: '60'
 
 #steps:
 #- task: PowerShell@2
@@ -86,3 +86,17 @@ steps:
 #     VeracodeAPIID: '$(vid)'
 #     VeracodeAPIsecret: '$(vkey)'
 #     fileToScan: '$(System.DefaultWorkingDirectory)/verademo.war'
+
+- task: Veracode Flaw Importer@3
+  inputs:
+    ConnectionDetailsSelection: 'Service Connection'
+    AnalysisService: 'vera_Azure'
+    veracodeAppProfile: 'myapp'
+    scanType: 'Static, SCA'
+    importType: 'All Unmitigated Flaws Violating Policy'
+    workItemType: 'Bug'
+    area: 'Azure_vera integration'
+    overwriteAreaPathInWorkItemsOnImport: true
+    iterationPath: 'Azure_vera integration'
+    overwriteIterationPath: true
+    flawImportLimit: '10'
