--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,12 +20,12 @@ steps:
     effectivePomSkip: false
     sonarQubeRunAnalysis: false
 
-# - task: VeracodePipelineScan@0
-#   inputs:
-#     VeracodeAPIID: '$(vid)'
-#     VeracodeAPIsecret: '$(vkey)'
-#     fileToScan: '/Users/amitashokshynavad/myagent/_work/2/s/target/verademo.war'
-#     policyName: 'Veracode Recommended Very High COPY'
+- task: VeracodePipelineScan@0
+  inputs:
+    VeracodeAPIID: '$(vid)'
+    VeracodeAPIsecret: '$(vkey)'
+    fileToScan: '/Users/amitashokshynavad/myagent/_work/2/s/target/verademo.war'
+    policyName: 'Veracode Recommended Very High COPY'
 
 
 
@@ -87,16 +87,16 @@ steps:
 #     VeracodeAPIsecret: '$(vkey)'
 #     fileToScan: '$(System.DefaultWorkingDirectory)/verademo.war'
 
-- task: Veracode Flaw Importer@3
-  inputs:
-    ConnectionDetailsSelection: 'Service Connection'
-    AnalysisService: 'vera_Azure'
-    veracodeAppProfile: 'myapp'
-    scanType: 'Static, SCA'
-    importType: 'All Unmitigated Flaws Violating Policy'
-    workItemType: 'Bug'
-    area: 'Azure_vera integration'
-    overwriteAreaPathInWorkItemsOnImport: true
-    iterationPath: 'Azure_vera integration'
-    overwriteIterationPath: true
-    flawImportLimit: '10'
+# - task: Veracode Flaw Importer@3
+#   inputs:
+#     ConnectionDetailsSelection: 'Service Connection'
+#     AnalysisService: 'vera_Azure'
+#     veracodeAppProfile: 'myapp'
+#     scanType: 'Static, SCA'
+#     importType: 'All Unmitigated Flaws Violating Policy'
+#     workItemType: 'Bug'
+#     area: 'Azure_vera integration'
+#     overwriteAreaPathInWorkItemsOnImport: true
+#     iterationPath: 'Azure_vera integration'
+#     overwriteIterationPath: true
+#     flawImportLimit: '10'
