--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,18 +20,27 @@ steps:
     effectivePomSkip: false
     sonarQubeRunAnalysis: false
 
-- task: Veracode@3
+# - task: Veracode@3
+#   inputs:
+#     ConnectionDetailsSelection: 'Service Connection'
+#     AnalysisService: 'vera_Azure'
+#     veracodeAppProfile: 'Azure_vera integration'
+#     version: '$(build.buildNumber)'
+#     filepath: '/Users/amitashokshynavad/myagent/_work/2/s/target/verademo.war'
+#     # optargs: '-autoscan false ' 
+#     createProfile: true
+#     importResults: true
+#     failBuildIfUploadAndScanBuildStepFails: false
+#     maximumWaitTime: '60'
+
+- task: PowerShell@2
+  displayName: 'Veracode pipeline scan'
   inputs:
-    ConnectionDetailsSelection: 'Service Connection'
-    AnalysisService: 'vera_Azure'
-    veracodeAppProfile: 'Azure_vera integration'
-    version: '$(build.buildNumber)'
-    filepath: '/Users/amitashokshynavad/myagent/_work/2/s/target/verademo.war'
-    # optargs: '-autoscan false ' 
-    createProfile: true
-    importResults: true
-    failBuildIfUploadAndScanBuildStepFails: false
-    maximumWaitTime: '60'
+   targetType: 'inline'
+   script: |
+      curl -O https://downloads.veracode.com/securityscan/pipeline-scan-LATEST.zip
+      unzip -o pipeline-scan-LATEST.zip
+      java -jar pipeline-scan.jar --veracode_api_id "$VERACODE_API_ID" --veracode_api_key "$VERACODE_API_KEY" --file "app/target/verademo.war" 
 
 #steps:
 #- task: PowerShell@2
