--- a/.github/workflows/veracode3.yml
+++ b/.github/workflows/veracode3.yml
@@ -48,7 +48,7 @@ jobs:
       with:
         args: unzip -qq VeracodeJavaAPI.zip -d dir
     - name: Run Pipeline Scanner
-      run: -jar VeracodeJavaAPI.jar -vid "${{secrets.VERACODE_API_ID}}" -vkey "${{secrets.VERACODE_API_KEY}}" -action DetailedReport -buildid 34427951 -outputfilepath /Users/amitashokshynavad/downloads/GitTest.pdf -format pdf
+      run: Java -jar VeracodeJavaAPI.jar -vid "${{secrets.VERACODE_API_ID}}" -vkey "${{secrets.VERACODE_API_KEY}}" -action DetailedReport -buildid 34427951 -outputfilepath /Users/amitashokshynavad/downloads/GitTest.pdf -format pdf
 
 
 
