--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ steps:
     AnalysisService: 'vera_Azure'
     veracodeAppProfile: 'Azure_vera integration'
     version: '$(build.buildNumber)'
-    filepath: '$(Build.Artifactstaging)'
+    filepath: '$(Build.ArtifactstagingDirectory)'
     # optargs: '-autoscan false ' 
     createProfile: true
     importResults: true
