--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,7 +28,7 @@ stages:
        AnalysisService: 'vera_Azure'
        veracodeAppProfile: 'Azure_vera integration'
        version: '$(build.buildNumber)'
-       filepath: '$(Build.DefaultworkingDirectory)/Verademo.war'
+       filepath: '$(Build.SourcesDirectory)/target/Verademo.war'
        # optargs: '-autoscan false ' 
        createProfile: true
        importResults: true
@@ -47,7 +47,7 @@ stages:
        script: |
           curl -O https://downloads.veracode.com/securityscan/pipeline-scan-LATEST.zip
           unzip -o pipeline-scan-LATEST.zip
-          java -jar pipeline-scan.jar --veracode_api_id "$VERACODE_API_ID" --veracode_api_key "$VERACODE_API_KEY" --file "$(Build.DefaultworkingDirectory)/Verademo.war" --baseline_file "baseline.json" 
+          java -jar pipeline-scan.jar --veracode_api_id "$VERACODE_API_ID" --veracode_api_key "$VERACODE_API_KEY" --file "$(Build.SourcesDirectory)/target/Verademo.war" --baseline_file "baseline.json" 
 
 - stage: 'Deploy_to_sca'
   jobs:
